5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4150/executions/1674_1880.log
== TEST (2019-04-30 10:59:26) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

ax = int(input("numero: "))

if(x<0)and(x>12)
	print("numero de mes invalido")
elif(x==1):
	print("janeiro")
elif(x==2):
	print("fevereiro")
elif(x==3):
	print("marco")
elif(x==4):
	print("abril")
elif(x==5):
	print("maio")
elif(x==6):
	print("junho")
elif(x==7):
	print("julho")
elif(x==8):
	print("agosto")
elif(x==9):
	print("setembro")
elif(x==10):
	print("outubro")
elif(x==11):
	print("novembro")
elif(x==12):
	print("dezembro")
		
-- ERROR:
File "XXXX", line 5
    if(x<0)and(x>12)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:59:32) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

ax = int(input("numero: "))

if(x<0)and(x>12):
	print("numero de mes invalido")
elif(x==1):
	print("janeiro")
elif(x==2):
	print("fevereiro")
elif(x==3):
	print("marco")
elif(x==4):
	print("abril")
elif(x==5):
	print("maio")
elif(x==6):
	print("junho")
elif(x==7):
	print("julho")
elif(x==8):
	print("agosto")
elif(x==9):
	print("setembro")
elif(x==10):
	print("outubro")
elif(x==11):
	print("novembro")
elif(x==12):
	print("dezembro")
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(x<0)and(x>12):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:59:43) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = int(input("numero: "))

if(x<0)and(x>12):
	print("numero de mes invalido")
elif(x==1):
	print("janeiro")
elif(x==2):
	print("fevereiro")
elif(x==3):
	print("marco")
elif(x==4):
	print("abril")
elif(x==5):
	print("maio")
elif(x==6):
	print("junho")
elif(x==7):
	print("julho")
elif(x==8):
	print("agosto")
elif(x==9):
	print("setembro")
elif(x==10):
	print("outubro")
elif(x==11):
	print("novembro")
elif(x==12):
	print("dezembro")
		
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:59:49) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = int(input("numero: "))

if(x<0)and(x>12):
	print("numero de mes invalido")
elif(x==1):
	print("janeiro")
elif(x==2):
	print("fevereiro")
elif(x==3):
	print("marco")
elif(x==4):
	print("abril")
elif(x==5):
	print("maio")
elif(x==6):
	print("junho")
elif(x==7):
	print("julho")
elif(x==8):
	print("agosto")
elif(x==9):
	print("setembro")
elif(x==10):
	print("outubro")
elif(x==11):
	print("novembro")
elif(x==12):
	print("dezembro")
		
-- EXECUTION TIME:
0.159409
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:00:10) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = int(input("numero: "))

if(x<0)and(x>12):
	print("numero de mes invalido")
elif(x==1):
	print("janeiro")
elif(x==2):
	print("fevereiro")
elif(x==3):
	print("marco")
elif(x==4):
	print("abril")
elif(x==5):
	print("maio")
elif(x==6):
	print("junho")
elif(x==7):
	print("julho")
elif(x==8):
	print("agosto")
elif(x==9):
	print("setembro")
elif(x==10):
	print("outubro")
elif(x==11):
	print("novembro")
elif(x==12):
	print("dezembro")
		
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:00:24) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = int(input("numero: "))

if(x<0)or(x>12):
	print("numero de mes invalido")
elif(x==1):
	print("janeiro")
elif(x==2):
	print("fevereiro")
elif(x==3):
	print("marco")
elif(x==4):
	print("abril")
elif(x==5):
	print("maio")
elif(x==6):
	print("junho")
elif(x==7):
	print("julho")
elif(x==8):
	print("agosto")
elif(x==9):
	print("setembro")
elif(x==10):
	print("outubro")
elif(x==11):
	print("novembro")
elif(x==12):
	print("dezembro")
		
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:00:31) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = int(input("numero: "))

if(x<0)or(x>12):
	print("numero de mes invalido")
elif(x==1):
	print("janeiro")
elif(x==2):
	print("fevereiro")
elif(x==3):
	print("marco")
elif(x==4):
	print("abril")
elif(x==5):
	print("maio")
elif(x==6):
	print("junho")
elif(x==7):
	print("julho")
elif(x==8):
	print("agosto")
elif(x==9):
	print("setembro")
elif(x==10):
	print("outubro")
elif(x==11):
	print("novembro")
elif(x==12):
	print("dezembro")
		
-- EXECUTION TIME:
0.208909
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
